# enigma_rs

./: Cargo.toml  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  label.yml  quality.yml  release.yml
src/: gui.rs  lib.rs  machine.rs  main.rs  plugboard.rs  reflector.rs  rotor.rs  utils.rs
tests/: enigma_test.rs
