[package]
name = "enigma_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
clap = { version = "4.4.0", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"

[dev-dependencies]
